fix minor UI error and add test cases

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/a6fef1e460.js"
       crossorigin="anonymous"
     ></script>
-    <title>Welcome to Social Network</title>
+    <title>Welcome to ProKonnect</title>
   </head>
 
   <body>
